--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-modern-drawer": "^1.2.0",
+    "recharts": "^2.7.2",
     "styled-components": "^6.0.1",
+    "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
