--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-modern-drawer": "^1.2.0",
