--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-faq-component": "^1.3.4",
     "react-icons": "^4.10.1",
     "react-modern-drawer": "^1.2.0",
+    "react-responsive": "^9.0.2",
     "recharts": "^2.7.2",
     "styled-components": "^6.0.1",
     "swiper": "^9.4.1",
