--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "react-icons": "^4.10.1",
     "react-modern-drawer": "^1.2.0",
     "react-responsive": "^9.0.2",
+    "react-slick": "^0.29.0",
     "recharts": "^2.7.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.1",
-    "swiper": "^9.4.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
