--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "recharts": "^2.7.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.1",
+    "swiper": "^10.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
