types error checked

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@klinecharts/pro": "^0.1.1",
     "@mui/material": "^5.14.0",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
@@ -19,6 +20,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "hamburger-react": "^2.5.0",
+    "klinecharts": "^9.5.3",
     "next": "13.4.7",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
